Document change in behaviour for db.schema.nodeTypeProperties() and db.schema.relTypeProperties() (#1063)
The column propertyTypes is a LIST, currently it outputs runtime types,
but in Cypher25 it outputs Cypher Types.

https://github.com/neo4j/docs-cypher/pull/1062

---------

Co-authored-by: Jens Pryce-Åklundh <112686610+JPryce-Aklundh@users.noreply.github.com>

--- a/modules/ROOT/pages/deprecations-additions-removals-compatibility.adoc
+++ b/modules/ROOT/pages/deprecations-additions-removals-compatibility.adoc
@@ -16,6 +16,30 @@ New features are added to the language continuously, and occasionally, some feat
 This section lists all of the features that have been removed, deprecated, added, or extended in different Cypher versions.
 Replacement syntax for deprecated and removed features are also indicated.
 
+[[cypher-deprecations-additions-removals-5.26]]
+== Neo4j 5.26
+
+=== Deprecated features
+
+[cols="2", options="header"]
+|===
+| Feature
+| Details
+
+a|
+label:functionality[]
+label:deprecated[]
+[source, cypher, role="noheader"]
+----
+CALL db.schema.nodeTypeProperties() YIELD propertyTypes RETURN propertyTypes;
+CALL db.schema.relTypeProperties() YIELD propertyTypes RETURN propertyTypes;
+----
+a|
+The column `propertyTypes` currently returned by the procedures link:{neo4j-docs-base-uri}/operations-manual/{page-version}/procedures/#procedure_db_schema_nodetypeproperties[`db.schema.nodeTypeProperties()`] and link:{neo4j-docs-base-uri}/operations-manual/{page-version}/procedures/#procedure_db_schema_reltypeproperties[`db.schema.relTypeProperties()`] produces a list of strings representing the potential Java types for a given property.
+In an upcoming major release of Neo4j, this will be updated to represent the possible Cypher types for that property instead.
+For all available Cypher types, see the section on xref::values-and-types/property-structural-constructed.adoc#types-synonyms[types and their synonyms].
+|===
+
 [[cypher-deprecations-additions-removals-5.25]]
 == Neo4j 5.25
 
