Fix version exact roles (#1095)

--- a/modules/ROOT/pages/appendix/tutorials/advanced-query-tuning.adoc
+++ b/modules/ROOT/pages/appendix/tutorials/advanced-query-tuning.adoc
@@ -15,7 +15,7 @@ Let's explain how to use these features with a more advanced query tuning exampl
 
 [NOTE]
 ====
-If you are upgrading an existing store to {neo4j-version-exact}, it may be necessary to drop and re-create existing indexes.
+If you are upgrading an existing store, it may be necessary to drop and re-create existing indexes.
 For information on native index support and upgrade considerations regarding indexes, see link:{neo4j-docs-base-uri}/operations-manual/{page-version}/performance/index-configuration[Operations Manual -> Performance -> Index configuration].
 ====
 
@@ -936,10 +936,10 @@ Predicates that will not work:
 
 [NOTE]
 ====
-If there is an existence constraint on the property, no predicate is required to trigger the optimization.
+If there is a xref:constraints/managing-constraints.adoc#create-property-existence-constraints[property existence constraint] on the property, no predicate is required to trigger the optimization.
 For example, `CREATE CONSTRAINT constraint_name FOR (p:Person) REQUIRE p.name IS NOT NULL`
 
-As of Neo4j {neo4j-version-exact}, predicates with parameters, such as `WHERE n.prop > $param`, can trigger _index-backed ORDER BY_.
+Predicates with parameters, such as `WHERE n.prop > $param`, can trigger _index-backed ORDER BY_.
 The only exception are queries with parameters of type `POINT`.
 ====
 
