Remove use of index-provider option (#1096)
Supplying the index-provider option will no longer have any effect, and
a user should not specify it. From 5.26 using the index-provider option
will generate a warning.
The index-provider has never controlled index behaviour in the 5.x
series, and the latest provider will always be the best one.

---------

Co-authored-by: Jens Pryce-Åklundh <112686610+JPryce-Aklundh@users.noreply.github.com>

--- a/modules/ROOT/pages/indexes/syntax.adoc
+++ b/modules/ROOT/pages/indexes/syntax.adoc
@@ -27,8 +27,8 @@ As of Neo4j 5.17, an informational notification is instead returned showing the 
 The index name must be unique among both indexes and constraints.
 A random name will be assigned if no name is explicitly given when an index is created.
 
-Index providers and configuration settings can be specified using the `OPTIONS` clause.
-However, not all indexes have available configuration settings or multiple providers.
+Index configuration settings can be specified using the `OPTIONS` clause.
+However, not all indexes have available configuration settings.
 In those cases, nothing needs to be specified and the `OPTIONS` map should be omitted from the query.
 
 [TIP]
@@ -37,8 +37,8 @@ Creating an index requires link:{neo4j-docs-base-uri}/operations-manual/{page-ve
 [[create-range-index]]
 === Range indexes
 
-Range indexes have only one index provider, `range-1.0`, and no supported index configuration.
-Since the index provider will be assigned by default, the `OPTIONS` map has been omitted from the syntax below.
+Range indexes have no supported index configuration.
+The `OPTIONS` map has, therefore, been omitted from the syntax below.
 
 .Create a range index for a node label, either on a single property or composite
 [source,syntax]
@@ -67,13 +67,15 @@ For more information, see xref:indexes/search-performance-indexes/managing-index
 [[create-text-index]]
 === Text indexes
 
+Text indexes have no supported index configuration.
+The `OPTIONS` map has, therefore, been omitted from the syntax below.
+
 .Create a text index for a node label on a single property
 [source,syntax]
 ----
 CREATE TEXT INDEX [index_name] [IF NOT EXISTS]
 FOR (n:LabelName) 
 ON (n.propertyName_1)
-[OPTIONS “{“ option: value[, …] “}”]
 ----
 
 .Create a text index for a relationship type on a single property
@@ -82,10 +84,7 @@ ON (n.propertyName_1)
 CREATE TEXT INDEX [index_name] [IF NOT EXISTS]
 FOR ()-”[“r:TYPE_NAME”]”-() 
 ON (r.propertyName_1)
-[OPTIONS “{“ option: value[, …] “}”]
 ----
-
-Text indexes have no supported index configuration and, as of Neo4j 5.1, they have two index providers available, `text-2.0` (default) and `text-1.0` (deprecated).
 
 [NOTE]
 It is not possible to create composite text indexes on multiple properties.
@@ -113,7 +112,6 @@ ON (r.propertyName_1)
 [OPTIONS “{“ option: value[, …] “}”]
 ----
 
-Point indexes have only one index provider available, `point-1.0`.
 The following settings can be specified for point indexes:
 
 * `spatial.cartesian.min`
@@ -133,8 +131,8 @@ For more information, see xref:indexes/search-performance-indexes/managing-index
 [[create-lookup-index]]
 === Token lookup indexes
 
-Token lookup indexes have only one index provider, `token-lookup-1.0`, and no supported index configuration.
-Since the index provider will be assigned by default, the `OPTIONS` map has been omitted from the syntax below.
+Token lookup indexes have no supported index configuration.
+The `OPTIONS` map has, therefore, been omitted from the syntax below.
 
 .Create a node label lookup index
 [source,syntax]
@@ -177,7 +175,6 @@ ON EACH “[“ r.propertyName[, ...] “]”
 [OPTIONS “{“ option: value[, …] “}”]
 ----
 
-Full-text indexes have only one index provider available, `fulltext-1.0`.
 The following settings can be specified for full-text indexes:
 
 * `fulltext.analyzer` - specifies what analyzer to use (the `db.index.fulltext.listAvailableAnalyzers` procedure lists what analyzers are available).
@@ -206,9 +203,6 @@ FOR ()-”[“r:TYPE_NAME”]”-()
 ON (r.propertyName)
 [OPTIONS “{“ option: value[, …] “}”]
 ----
-
-As of Neo4j 5.18, vector indexes have two vector index providers available, `vector-2.0` (default) and `vector-1.0`.
-For more information, see xref:indexes/semantic-indexes/vector-indexes.adoc#vector-index-providers[Vector index providers for compatibility].
 
 For a full list of all vector index settings, see xref:indexes/semantic-indexes/vector-indexes.adoc#configuration-settings[Vector index configuration settings].
 Note that the `OPTIONS` clause was mandatory prior to Neo4j 5.23 because it was necessary to configure the `vector.dimensions` and `vector.similarity_function` settings when creating a vector index.
