--- a/modules/ROOT/pages/indexes/semantic-indexes/vector-indexes.adoc
+++ b/modules/ROOT/pages/indexes/semantic-indexes/vector-indexes.adoc
@@ -351,6 +351,9 @@ DROP INDEX moviePlots
 == Vector index providers for compatibility
 
 As of Neo4j 5.18, the default index provider is `vector-2.0`.
+As of Neo4j 5.26, it is no longer possible to specify an index provider when creating indexes.
+Instead, Neo4j selects the most performant provider (currently `vector-2.0`).
+
 Previously created `vector-1.0` indexes will continue to function.
 
 .Learn more about vector index provider differences
